--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,14 @@
     <h1>Velkommen til!</h1>
     <form id="delete">
       <input value="Delete" type="submit" />
+
+      <input type="button" onclick="location.href='/register.html';" value="Log out" />
+
+      <input type="button" onclick="location.href='/items.html';" value="Sælg vare" />
+  
+  
+      <input type="button" onclick="location.href='/varerTilSalg.html';" value="Se solgte vare" />  
+
     </form>
   </body>
 </html>
