--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,13 +6,19 @@
     <h1>Velkommen til!</h1>
     <form id="delete">
       <input value="Delete" type="submit" />
-
+          
+      <!-- jbfdusfsuf-->
       <input type="button" onclick="location.href='/register.html';" value="Log out" />
 
+
+        <!-- jbfdusfsuf-->
       <input type="button" onclick="location.href='/items.html';" value="Sælg vare" />
   
-  
-      <input type="button" onclick="location.href='/varerTilSalg.html';" value="Se solgte vare" />  
+        <!-- jbfdusfsuf-->
+      <input type="button" onclick="location.href='/itemsSell.html';" value="Se solgte vare" />  
+      
+        <!-- jbfdusfsuf-->
+      <input type="button" id= "opdater" onclick="location.href='/Opdater.html';" value="Opdater bruger" />
 
     </form>
   </body>
