--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,17 +7,17 @@
     <form id="delete">
       <input value="Delete" type="submit" />
           
-      <!-- jbfdusfsuf-->
+      <!-- Her vil jeg tilføje register knappen-->
       <input type="button" onclick="location.href='/register.html';" value="Log out" />
 
 
-        <!-- jbfdusfsuf-->
+        <!-- Her vil jeg tilføje "Sælg vare" knappen-->
       <input type="button" onclick="location.href='/items.html';" value="Sælg vare" />
   
-        <!-- jbfdusfsuf-->
+        <!-- Her vil jeg lave en knap der vil føre videre til de solgte vare-->
       <input type="button" onclick="location.href='/itemsSell.html';" value="Se solgte vare" />  
       
-        <!-- jbfdusfsuf-->
+        <!-- Her vil jeg tilføje opdater knappen -->
       <input type="button" id= "opdater" onclick="location.href='/Opdater.html';" value="Opdater bruger" />
 
     </form>
