--- a/src/views/items.html
+++ b/src/views/items.html
@@ -1,3 +1,4 @@
+ <!-- Her vil jeg lave min HTML hjemmeside for når jeg sætter en vare til salg-->
 <html>
   <script src="items.js"></script>
 <head>
