--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,9 +1,10 @@
+ <!-- Her vil jeg lave min HTML hjemmeside så brugeren kan registere sig-->
 <html>
   <head>
     <script src="register.js"></script>
   </head>
   <body>
-    <h1>Register bruger</h1>
+    <h1>Register din bruger på MySales!</h1>
     <form id="form">
       <input placeholder="Email" id="email" />
       <input placeholder="Password" id="password" />
