--- a/src/views/items.html
+++ b/src/views/items.html
@@ -11,12 +11,12 @@
       <input type="text" id="vare" placeholder="Navn på produkt"/>
 
       <label for="vareKategori">Varekategori</label>
-      <select name="vareKategori" id="vareKategori">
-        <option value="Taske"></option>
-        <option value="Tøj"></option>
-        <option value="Sko"></option>
+      <select name="vareKategori" id="vareKategori" >
+        <option value="Taske" >Taske</option>
+        <option value="Tøj" >Tøj</option>
+        <option value="Sko" >Sko</option>
       </select>
- 
+
       <label for="pris">Pris</label>
       <input type="number" id="pris" placeholder="Pris"/>
 
