--- a/src/views/itemsSell.html
+++ b/src/views/itemsSell.html
@@ -5,8 +5,9 @@
   <body>
     <h1>Vare oversigt</h1>
     <form id="delete">
-      <input value="Delete" type="delete" />
-      
+        <input type="button" id= "delete" onclick="location.href='/itemsSell.html';" value="Slet vare" />
+
+        <input type="button" id= "delete" onclick="location.href='/itemsSell.html';" value="Opdater vare" />
 
     </form>
   </body>
