--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,13 +1,19 @@
  <!-- Her vil jeg lave min HTML hjemmeside så brugeren kan registere sig-->
 <html>
   <head>
+    <!-- Connect til javascript fil-->
     <script src="register.js"></script>
   </head>
   <body>
+    <!-- Overskift på siden-->
     <h1>Register din bruger på MySales!</h1>
+    <!-- giver id så knappen får en funktionalitet-->
     <form id="form">
+      <!-- placeholder = hvad skal der stå indtil brugen skriver-->
+      <!-- id bruges til at hente det, som brugeren skriver -->
       <input placeholder="Email" id="email" />
       <input placeholder="Password" id="password" />
+      <!-- Laver en submit knap -->
       <input value="Submit" type="submit" />
     </form>
   </body>
