--- a/src/views/Opdater.html
+++ b/src/views/Opdater.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <script src= "../views/index.html"></script>
+     <!-- Sammensætter med javascript-->
 <script src="Opdater.js"></script>
   </head>
   <body>
