--- a/src/views/register.html
+++ b/src/views/register.html
@@ -9,7 +9,7 @@
     <h1>Register din bruger på MySales!</h1>
     <!-- giver id så knappen får en funktionalitet-->
     <form id="form">
-      <!-- placeholder = hvad skal der stå indtil brugen skriver-->
+      <!-- placeholder = hvad skal der stå indtil brugeren skriver-->
       <!-- id bruges til at hente det, som brugeren skriver -->
       <input placeholder="Email" id="email" />
       <input placeholder="Password" id="password" />
@@ -18,3 +18,7 @@
     </form>
   </body>
 </html>
+
+
+
+
