--- a/src/views/itemsSell.html
+++ b/src/views/itemsSell.html
@@ -5,9 +5,9 @@
   <body>
     <h1>Vare oversigt</h1>
     <form id="delete">
-        <input type="button" id= "delete" onclick="location.href='/itemsSell.html';" value="Slet vare" />
+        <input type="button" id= "delete"  value="Slet vare" />
 
-        <input type="button" id= "delete" onclick="location.href='/itemsSell.html';" value="Opdater vare" />
+        <input type="button" id= "delete"  value="Opdater vare" />
 
     </form>
   </body>
