--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,11 +4,11 @@
   </head>
   <body>
     <h1>Velkommen til!</h1>
-    
+
     <form id="delete">
       <input value="Delete" type="submit" />
           
-      <!-- Her vil jeg tilføje register knappen-->
+      <!-- Her vil jeg tilføje log out knappen-->
       <input type="button" onclick="location.href='/register.html';" value="Log out" />
 
 
